--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 # Used by https://direnv.net
+shopt -s globstar
 
 # Automatically reload when this file changes
 watch_file nix/*.nix nix/**/*.nix
