feat: Render C4 container and system container diagrams

--- a/.envrc
+++ b/.envrc
@@ -4,6 +4,7 @@ shopt -s globstar
 
 # Automatically reload when this file changes
 watch_file nix/*.nix nix/**/*.nix
+watch_file detekt-config.yml
 
 # Load `nix develop`
 use flake
