--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -20,7 +20,7 @@
         {
             "customType": "regex",
             "description": "Update Gradle Java Version",
-            "fileMatch": ["(^|.*/).*.gradle(.kts)?$"],
+            "managerFilePatterns": ["/(^|.*/).*.gradle(.kts)?$/"],
             "matchStrings": ["jvmToolchain\\((?<currentValue>\\d+)\\)"],
             "datasourceTemplate": "java-version",
             "depNameTemplate": "java",
@@ -29,7 +29,7 @@
         {
             "customType": "regex",
             "description": "Update Nix Java Version",
-            "fileMatch": ["\\.nix$"],
+            "managerFilePatterns": ["/\\.nix$/"],
             "matchStrings": ["temurin-bin-(?<currentValue>\\d+)"],
             "datasourceTemplate": "java-version",
             "depNameTemplate": "java",
