--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,11 @@
 [versions]
+flyway = "11.12.0"
+jooq = "3.20.6"
 kotlin = "2.2.10"
 structurizr = "4.1.0"
 plantuml = "1.2025.4"
 junit = "5.13.4"
+postgresql = "42.7.7"
 
 [libraries]
 structurizr-client = { module = "com.structurizr:structurizr-client", version.ref = "structurizr" }
@@ -10,6 +13,13 @@ structurizr-autolayout = { module = "com.structurizr:structurizr-autolayout", ve
 structurizr-export = { module = "com.structurizr:structurizr-export", version.ref = "structurizr" }
 
 plantuml = { module = "net.sourceforge.plantuml:plantuml", version.ref = "plantuml" }
+postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
+
+flyway-core = { module = "org.flywaydb:flyway-core", version.ref = "flyway" }
+flyway-postgresql = { module = "org.flywaydb:flyway-database-postgresql", version.ref = "flyway" }
+
+jooq = { module = "org.jooq:jooq", version.ref = "jooq" }
+jooq-meta = { module = "org.jooq:jooq-meta", version.ref = "jooq" }
 
 junit-bom = { module = "org.junit:junit-bom", version.ref = "junit" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api" }
@@ -17,4 +27,5 @@ junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 
 [plugins]
+jooq-codegen = { id = "org.jooq.jooq-codegen-gradle", version.ref = "jooq" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
