wip: project graph

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,7 @@ org.gradle.console=plain
 
 # implicitly verified by the nix build
 org.gradle.dependency.verification=off
+
+
+# TODO: Disable in buildGradleAPplication and update-verification-metadata
+ org.gradle.unsafe.isolated-projects=true
