chore: Disable digest pinning for nix
That's what the lockfile is for

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,6 +14,11 @@
         {
             "matchDepNames": "net.sourceforge.plantuml:plantuml",
             "allowedVersions": "/^[0-9]+\\.[0-9]+\\.[0-9]+$/"
+        },
+        {
+            "matchManagers": ["nix"],
+            "matchUpdateTypes": ["pinDigest"],
+            "enabled": false
         }
     ],
     "customManagers": [
