chore: Disable gradle lockfile maintenance

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,6 +19,12 @@
             "matchManagers": ["nix"],
             "matchUpdateTypes": ["pinDigest"],
             "enabled": false
+        },
+        {
+            "matchManagers": ["gradle"],
+            "lockFileMaintenance": {
+                "enabled": false
+            }
         }
     ],
     "customManagers": [
