--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -32,7 +32,7 @@
             "customType": "regex",
             "description": "Update Gradle Java Version",
             "managerFilePatterns": ["/(^|.*/).*.gradle(.kts)?$/"],
-            "matchStrings": ["jvmToolchain\\((?<currentValue>\\d+)\\)"],
+            "matchStrings": ["closestSupportedTo\\((?<currentValue>\\d+)\\)"],
             "datasourceTemplate": "java-version",
             "depNameTemplate": "java",
             "extractVersionTemplate": "^(?<version>\\d+)"
